# viztree

./: MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: viztree-ci.yml
src/viztree/: __main__.py  argments.py
src/viztree/templates/: dir_tree_html.j2
tests/unit/: test___main__.py
