[metadata]
name = viztree
version = attr: viztree.__version__
url = https://github.com/sky-joker/viztree
project_urls =
    Bug Tracker = https://github.com/sky-joker/viztree/issues
    Source Code = https://github.com/sky-joker/viztree
description = Directory tree visualizer
long_description = file: README.md
long_description_content_type = text/markdown
author = sky-joker
author_email = sky.jokerxx@gmail.com
maintainer = sky-joker
maintainer_email = sky.jokerxx@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    tree

[options]
python_requires = >=3.6
zip_safe = False
packages = find:
include_package_data = True
install_requires =
package_dir=
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    viztree = viztree.__main__:main
